--- a/R/tile-utils.rnw
+++ b/R/tile-utils.rnw
@@ -25,7 +25,7 @@ default.plot.margin = unit(c(1, 1, -9, -5)*0.05, "cm")
 
 <<echo=F,eval=TRUE,fig.height=1.5>>=
 
-TileSquare150x150Block = function ( TextId1="24",TextId2="Aliquam",
+TileSquare150x150Block = function ( TextId1="24",TextId2="Aliquam ad valorum",TextId3="",
     bg.color=default.bg.color,
     fg.color=default.fg.color,
     border.color=default.border.color,
@@ -40,11 +40,11 @@ TileSquare150x150Block = function ( TextId1="24",TextId2="Aliquam",
 # text is aligned from bottom-left bounding box (default is center-center)
 # bounding box is anchored using (x,y)
 d=data.frame(
-    x=c(75,75),
-    y=c(70,45), 
-    size=c(5,2.90),
-    face=c("plain","plain"),
-    label=c(TextId1,TextId2)
+    x=c(75,75,75),
+    y=c(85,60,40), 
+    size=c(5,2.90,2.9),
+    face=c("plain","plain","plain"),
+    label=c(TextId1,TextId2,TextId3)
 )
 
 # Initialize plot and set scales.  (0,0) is in bottom left, top-right is (150,150), 
@@ -80,7 +80,7 @@ if(show.samples){ TileSquare150x150Block() }
 
 <<echo=F,eval=TRUE,fig.height=1.5>>=
 
-TileSquare150x150Text01 = function ( HeaderId1="VitAe ligu",TextId1="Vivamus tincidun",TextId2="Vivamus tincidun",TextId3="Vivamus tincidun",
+TileSquare150x150Text01 = function ( HeaderId1="VitAe ligu",TextId1="Vivamus tincidun",TextId2="Vivamus tincidun",TextId3="Vivamus tincidun",TextId4="Ad infinitium",
     bg.color=default.bg.color,
     fg.color=default.fg.color,
     border.color=default.border.color,
@@ -95,11 +95,11 @@ TileSquare150x150Text01 = function ( HeaderId1="VitAe ligu",TextId1="Vivamus tin
 # text is aligned from bottom-left bounding box (default is center-center)
 # bounding box is anchored using (x,y)
 d=data.frame(
-    x=c(15,15,15,15),
-    y=c(120,95,70,45), 
-    size=c(4.4095,2.5,2.5,2.5),
-    face=c("plain","plain","plain","plain"),
-    label=c(HeaderId1,TextId1,TextId2,TextId3)
+    x=c(75,15,15,15,15),
+    y=c(120,95,75,55,35), 
+    size=c(5.0,2.9,2.9,2.9,2.9),
+    face=c("plain","plain","plain","plain","plain"),
+    label=c(HeaderId1,TextId1,TextId2,TextId3,TextId4)
 )
 
 # Initialize plot and set scales.  (0,0) is in bottom left, top-right is (150,150), 
@@ -121,7 +121,7 @@ p = p + theme(
 
 # Content
 #c("plain","bold","italic","bold.italic"c("plain","bold","italic","bold.italic")
-p = p + geom_text(mapping=aes(label=label),size=d$size,colour=fg.color,hjust=0.0,vjust=0,fontface=d$face,family=family)
+p = p + geom_text(mapping=aes(label=label),size=d$size,colour=fg.color,hjust=c(0.50,0,0,0,0),vjust=0,fontface=d$face,family=family)
 
 if (show.anchor) p = p + geom_point(size=0.5)
 
@@ -152,14 +152,15 @@ lines = strwrap(TextId1,width=19)
 # text is aligned from bottom-left bounding box (default is center-center)
 # bounding box is anchored using (x,y)
 d=data.frame(
-    x=c(15,15,15,15),
-    y=c(120,95,70,45), 
-    size=c(4.4095,2.5,2.5,2.5),
-    face=c("plain","plain","plain","plain"),
+    x=c(75,15,15,15,15),
+    y=c(120,95,75,55,35), 
+    size=c(5.0,2.9,2.9,2.9,2.9),
+    face=c("plain","plain","plain","plain","plain"),
     label=c(HeaderId1,
       ifelse(length(lines)>=1,lines[1],""),
       ifelse(length(lines)>=2,lines[2],""),
-      ifelse(length(lines)>=3,lines[3],"")
+      ifelse(length(lines)>=3,lines[3],""),
+      ifelse(length(lines)>=4,lines[4],"")	  
     )
 )
 
@@ -182,7 +183,7 @@ p = p + theme(plot.margin=plot.margin )
 
 # Content
 #c("plain","bold","italic","bold.italic"c("plain","bold","italic","bold.italic")
-p = p + geom_text(mapping=aes(label=label),size=d$size,colour=fg.color,hjust=0.0,vjust=0,fontface=d$face,family=family)
+p = p + geom_text(mapping=aes(label=label),size=d$size,colour=fg.color,hjust=c(0.5,0,0,0,0),vjust=0,fontface=d$face,family=family)
 
 if (show.anchor) p = p + geom_point(size=0.5)
 
@@ -248,6 +249,59 @@ if(show.samples){ TileSquare150x150Text03() }
 @
 
 
+<<echo=F,eval=TRUE,fig.height=1.5>>=
+
+TileSquare150x150Blank = function ( TextId1=" ",TextId2=" ",
+    bg.color="white",
+    fg.color="white",
+    border.color="white",
+    family=default.font.family,
+    logo=NULL,
+    badge=NULL,
+	  plot.margin=default.plot.margin,
+    show.anchor=FALSE) {
+# Modeled off Windows 8 tile: http://msdn.microsoft.com/en-us/library/windows/apps/hh761491.aspx#TileSquareBlock
+# Color reference: # http://www.cookbook-r.com/Graphs/Colors_%28ggplot2%29/
+  
+# text is aligned from bottom-left bounding box (default is center-center)
+# bounding box is anchored using (x,y)
+d=data.frame(
+    x=c(75,75),
+    y=c(85,60), 
+    size=c(5,2.90),
+    face=c("plain","plain"),
+    label=c(TextId1,TextId2)
+)
+
+# Initialize plot and set scales.  (0,0) is in bottom left, top-right is (150,150), 
+p = ggplot(data=d,mapping=aes(x=x,y=y)) + scale_y_continuous(limits=c(0,150), breaks=NULL) + scale_x_continuous(limits=c(0,150), breaks=NULL) + coord_fixed()
+
+# axes labels (set to blank)
+p = p + theme(axis.title.x = element_blank(), axis.title.y = element_blank(), axis.ticks = element_blank())
+
+# margins
+
+p = p + theme(plot.margin=plot.margin )
+
+# Panel: border, background
+# use >> colors() to view availble colors from R
+p = p + theme(
+           panel.border = element_rect(linetype = "solid",colour=NA,fill=NA),
+           panel.background=element_rect(fill=NA)
+        )
+
+# Content
+#c("plain","bold","italic","bold.italic"c("plain","bold","italic","bold.italic")
+p = p + geom_text(mapping=aes(label=label),size=d$size,colour=fg.color,hjust=0.5,vjust=0,fontface=d$face,family=family)
+
+if (show.anchor) p = p + geom_point(size=0.5)
+
+p
+}
+
+if(show.samples){ TileSquare150x150Block() }
+
+@
 
 
 \end{document}
