Not sure what I changed!

--- a/R/report-utils2.rnw
+++ b/R/report-utils2.rnw
@@ -210,7 +210,8 @@ tableDump = function(pt,sort=T,commas=T,cleanNames=T,rename=T,rename.termcodes=T
   size="small",caption=NULL,label=NULL,
   include.rownames=getOption("xtable.include.rownames", FALSE),
   tabular.environment="longtable",
-  format.args=list(big.mark=",",decimal.mark=".",zero.print=NULL),
+  zero.print=NULL,
+  format.args=list(big.mark=",",decimal.mark=".",zero.print=zero.print),
   vadjust.string="\\vadjust{\\vskip 3pt \\vskip 0pt}",
   midrule.string="\\midrule",
   digits=0,
