--- a/styles/useful-packages.sty
+++ b/styles/useful-packages.sty
@@ -3,20 +3,20 @@
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
 
 
-%\usepackage{alltt}
-%\usepackage{fontspec}  % for xelatex
-%\usepackage{float}
-%\usepackage{caption}
-%\usepackage{subcaption}
-%\usepackage{upquote}
-%\usepackage{verbatim}
-%\usepackage{setspace}
-%\usepackage{array}
-%\usepackage{ctable}
-%\usepackage{tabularx}
-%\usepackage{multirow}
-%\usepackage{longtable}
-%\usepackage[section]{placeins}
+\usepackage{alltt}
+\usepackage{fontspec}  % for xelatex
+\usepackage{float}
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage{upquote}
+\usepackage{verbatim}
+\usepackage{setspace}
+\usepackage{array}
+\usepackage{ctable}
+\usepackage{tabularx}
+\usepackage{multirow}
+\usepackage{longtable}
+\usepackage[section]{placeins}
 %\usepackage{fancyvrb,pdfpages,appendix}
 %\usepackage{rotating}
 %\usepackage[mdyyyy,hhmmss]{datetime}
