Cleaned up beamer style, bolded title

--- a/styles/beamer-setup.sty
+++ b/styles/beamer-setup.sty
@@ -60,6 +60,8 @@
 %\usecolortheme{whale}
 %\usecolortheme{wolverine}
 
+\setbeamerfont{frametitle}{series=\bfseries}
+
 %\setbeamertemplate{footline} % To remove the footer line in all slides uncomment this line
 %\setbeamertemplate{footline}[page number] % To replace the footer line in all slides with a simple slide count uncomment this line
 
@@ -82,6 +84,7 @@
 
 \usepackage{fontspec}
 \setmainfont{Univers LT Std 45 Light}
+
 
 \setbeamerfont{itemize/enumerate body}{family=\sffamily, size={\fontsize{12}{12}}}
 \setbeamerfont{itemize/enumerate subbody}{family=\sffamily, size={\fontsize{11}{11}}}
